deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app
  labels:
    app: springboot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      containers:
      - name: springboot-app
        #image: "COLOCAR O NOME DA IMAGEM DOCKER QUANDO EU CRIAR"#
        ports:
        - containerPort: 8080
