Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
spec:
  selector:
    app.kubernetes.io/name: MyAppspringboot
  ports:
    - protocol: TCP
      port: 80 #porta de origem do meu po
      targetPort: 8080 #porta de destino do meu pod
